SourceOrg/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Type_Banner__c</fullName>
        <description>Displays banners for different types of accounts, specifically for Corporate Partnerships</description>
        <formula>IF(  Corporate_Partner__c = TRUE, IMAGE(&quot;/servlet/servlet.FileDownload?file=015i0000009lho2&quot;, &quot;Partner&quot;, 50, 300), &quot;General Account&quot;)</formula>
        <label>Account Type Banner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Name__c</fullName>
        <label>Alternate Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue_In_Million__c</fullName>
        <formula>AnnualRevenue /1000000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Revenue In Million</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Latitude_Longitude__c</fullName>
        <description>Latitude/Longitude Of Billing Address</description>
        <inlineHelpText>Latitude/Longitude Of Billing Address</inlineHelpText>
        <label>Billing Address Latitude Longitude</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>CDA__c</fullName>
        <description>Formula Field To display the count of CDA in the 360 Report</description>
        <formula>IF( OR(N_CDA_In_Place_Between_Firm_And_KU__c = 0,N_CDA_In_Place_Between_Firm_And_KU__c = null), &quot;None&quot;, Text(N_CDA_In_Place_Between_Firm_And_KU__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Field To display the count of CDA in the 360 Report</inlineHelpText>
        <label>CDA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Career_Services_Bucket__c</fullName>
        <formula>IF ( N_OfCareerFairEvents__c + N_OfInternships__c + RU_Job_Count_Total__c + N_OfJobsPosted__c &gt;=1,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Career Services Bucket</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Continuing_Education_Bucket__c</fullName>
        <formula>IF ( N_Of_Firm_Employees_Seeking_Training_At__c &gt;=1,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Continuing Education Bucket</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Corporate_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks the Account as a Corporate Partner, as defined by the Office of Corporate Partnerships. Currently manually maintained.</description>
        <inlineHelpText>Marks the Account as a Corporate Partner, as defined by the Office of Corporate Partnerships</inlineHelpText>
        <label>Corporate Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Partnership_Ownership__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box indicating this contact has been handled by Corporate Partnerships.</description>
        <inlineHelpText>This contact is maintained by Corporate Partnerships</inlineHelpText>
        <label>Corporate Partnership Ownership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_DUNS__c</fullName>
        <description>Hidden</description>
        <formula>DandbCompany.GlobalUltimateDunsNumber</formula>
        <inlineHelpText>Hidden</inlineHelpText>
        <label>Global Ultimate DUNS Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Latitude__c</fullName>
        <formula>DandbCompany.Latitude</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Latitude</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Longitude__c</fullName>
        <formula>DandbCompany.Longitude</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Longitude</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Annual_Sales_Volume__c</fullName>
        <formula>DandbCompany.SalesVolume</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>D&amp;B Annual Sales Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>D_B_Legal_Structure__c</fullName>
        <formula>DandbCompany.YearStarted</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>D&amp;B Year Started</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Location_Type__c</fullName>
        <formula>IF((ISPICKVAL(DandbCompany.LocationStatus,&quot;Headquarters/Parent. Branches and/or subsidiaries report to the business&quot;)),&quot;Headquarters/Parent&quot;,&quot;Branch or Single Location&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>D&amp;B Location Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Ownership_Type_Indicator__c</fullName>
        <formula>IF((ISPICKVAL(DandbCompany.PublicIndicator,&quot;Y&quot;)),&quot;Public&quot;,&quot;Unknown&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>D&amp;B Ownership Type Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_CostSavings__c</fullName>
        <defaultValue>0</defaultValue>
        <label>$CostSavings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>D_ForCapstoneProjects__c</fullName>
        <defaultValue>0</defaultValue>
        <label>$ ForCapstoneProjects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>D_FromEquipmentLease__c</fullName>
        <defaultValue>0</defaultValue>
        <label>$ FromEquipmentLease</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>D_FromExternalInvestment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>$ FromExternalInvestment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>D_FromJointPatents__c</fullName>
        <defaultValue>0</defaultValue>
        <label>$ FromJointPatents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>D_Generated_From_Licenses__c</fullName>
        <defaultValue>0</defaultValue>
        <label>$ Generated From Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>D_ITVendorSpending__c</fullName>
        <defaultValue>0</defaultValue>
        <label>$ ITVendorSpending</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>D_LicenseRevenueFromSpinoffs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>$ LicenseRevenueFromSpinoffs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>D_Of_Gifts_To_KU__c</fullName>
        <defaultValue>0</defaultValue>
        <label>$ Of Endowment Gifts To KU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>D_Raised_From_SBIR_STTR_Grants__c</fullName>
        <defaultValue>0</defaultValue>
        <label>$ Raised From SBIR/STTR Grants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>D_ServiceAgreements__c</fullName>
        <label>$ ServiceAgreements</label>
        <summarizedField>Source_Organization__c.Mof_service_agreements__c</summarizedField>
        <summaryForeignKey>Source_Organization__c.Master_Organization__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>D_SponsoredResearchAwards__c</fullName>
        <label>$ SponsoredResearchAwards</label>
        <summarizedField>Source_Organization__c.Mof_Sponsored_Research_Awards__c</summarizedField>
        <summaryForeignKey>Source_Organization__c.Master_Organization__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Distance_To_KU__c</fullName>
        <description>Distance To KU (In Miles)</description>
        <formula>IF(
AND(
NOT(ISNULL(Value(DB_Latitude__c))),
NOT(ISNULL(Value(DB_Longitude__c))),
Value(DB_Latitude__c)&lt;&gt;0,
Value(DB_Longitude__c)&lt;&gt;0
),
DISTANCE(GEOLOCATION(Value(DB_Latitude__c),
Value(DB_Longitude__c)),GEOLOCATION(38.95890,-95.25156),&quot;mi&quot;),
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Distance To KU (In Miles)</inlineHelpText>
        <label>Distance To KU (In Miles)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distilled_Master_del__c</fullName>
        <label>Pending Master</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domestic_Ultimate_D_U_N_S_NumberDomestic__c</fullName>
        <formula>DandbCompany.DomesticUltimateDunsNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domestic Ultimate D-U-N-S Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_Co_Key_Executive_Visits_To_KU__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Expected Value Of # of Key Executive Visits from the company</description>
        <inlineHelpText>Expected Value Of # of Key Executive Visits from the company</inlineHelpText>
        <label>EV # Co Key Executive Visits To KU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Collaborative_Grants_Awarded__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Expected Value Of $ of collaborative grants</description>
        <inlineHelpText>Expected Value Of $ of collaborative grants</inlineHelpText>
        <label>EV # Collaborative Grants Awarded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Company_FTE_Located_In_KU_BTBR__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Expected Value Of # of Local KU BTBC FTE</description>
        <inlineHelpText>Expected Value Of # of Local KU BTBC FTE</inlineHelpText>
        <label>EV # Company FTE Located In KU BTBC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Company_FTE_Located_In_Kansas__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Expected Value Of # of Local FTE</description>
        <inlineHelpText>Expected Value Of # of Local FTE</inlineHelpText>
        <label>EV # Company FTE Located In Kansas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Company_FTE_Located_In_Region__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Expected Value Of # of FTE in region</description>
        <inlineHelpText>Expected Value Of # of FTE in region</inlineHelpText>
        <label>EV # Company FTE Located In Region</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Company_Reps_On_KUCTC_Board__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Expected Value of # of Company Reps On KUCTC Board</description>
        <inlineHelpText>Expected Value of # of Company Reps On KUCTC Board</inlineHelpText>
        <label>EV # Company Reps On KUCTC Board</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Company_Reps_On_Start_Up_Board__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Expected Value of # of Company Reps On Start-Up Board</description>
        <inlineHelpText>Expected Value of # of Company Reps On Start-Up Board</inlineHelpText>
        <label>EV # Company Reps On Start-Up Board</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Cost_Saving__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Cost saving from IT Vendor</description>
        <inlineHelpText>Cost saving from IT Vendor</inlineHelpText>
        <label>EV $ Cost Saving</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_For_Capstone_Projects__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Expected Value Of Capstone Project $</description>
        <inlineHelpText>Expected Value Of Capstone Project $</inlineHelpText>
        <label>EV $ For Capstone Projects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_From_Equipment_Lease__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Expected Value Of $ from LEased Equipments</description>
        <inlineHelpText>Expected Value Of $ from LEased Equipments</inlineHelpText>
        <label>EV $ From Equipment Lease</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_From_Service_Agreements__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Expected Value Of $ from Service Agreements</description>
        <inlineHelpText>Expected Value Of $ from Service Agreements</inlineHelpText>
        <label>EV $ From Service Agreements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_Generated_From_Joint_Patents__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Expected Value Of $ from Joint Patents</description>
        <inlineHelpText>Expected Value Of $ from Joint Patents</inlineHelpText>
        <label>EV $ Generated From Joint Patents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_Generated_From_Licenses__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Expected Value Of $ from Licenses</description>
        <inlineHelpText>Expected Value Of $ from Licenses</inlineHelpText>
        <label>EV $ Generated From Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_Interviews_On_Campus__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Expected Value of Interviews on campus</description>
        <inlineHelpText>Expected Value of Interviews on campus</inlineHelpText>
        <label>EV # Interviews On Campus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_KU_Researchers_With_Non_KU_To_CO__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Expected Value of KU researchers with non-KU relationship with the Master Organization</description>
        <inlineHelpText>Expected Value of KU researchers with non-KU relationship with the Master Organization</inlineHelpText>
        <label>EV #KUResearchers With NonKURelationship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_KU_Visits_To_CO_HQ__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Expected Value of # of KU Visits to Headquarters</description>
        <inlineHelpText>Expected Value of # of KU Visits to Headquarters</inlineHelpText>
        <label>EV # KU Visits To CO HQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Length_Of_Relationship__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV Length Of Relationship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_License_Revenue_From_Spin_Off__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Expected Value Of $ License From Spinoff</description>
        <inlineHelpText>Expected Value Of $ License From Spinoff</inlineHelpText>
        <label>EV $ License Revenue From Spin-Off</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_NOf_Sponsored_Research_Awards__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of Sponsored Research Awards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Awarded_Grants_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV $ Of Awarded Grants Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_Of_Awarded_Grants_received_By_KU__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Expected Value Of Awarded Grant $</description>
        <inlineHelpText>Expected Value Of Awarded Grant $</inlineHelpText>
        <label>EV $ Of Awarded Grants received By KU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_Of_Calls_To_Firm__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of Calls To Firm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Career_Dair_Events__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of Career Fair Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Citations_For_Published_Research__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of Citations For Published Research</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Collaborative_policy_Changing__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of CollaborativePolicyActivities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Courses_With_Firm_Input__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of Courses With Firm Input</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Emails_To_Firm__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of Emails To Firm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Executive_Briefings__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of  Executive Briefings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Firm_Activities_With_Other_U__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of Firm Activities With Other U</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Firm_Courses_held__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of Firm Courses held</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Firm_Employees_Seeking_Training_CE__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of Firm Employees Seeking Training</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Firm_Expert_Visits_To_KU__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of Firm Expert Visits To KU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Gifts_To_KU__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Expected Value Of Gift $</description>
        <inlineHelpText>Expected Value Of Gift $</inlineHelpText>
        <label>EV $ Of Gifts To KU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_Of_IT_Vendor_Spending__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Expected Value Of $ to be spent on IT Vendor</description>
        <inlineHelpText>Expected Value Of $ to be spent on IT Vendor</inlineHelpText>
        <label>EV $ Of IT Vendor Spending</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_Of_Internships__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of Internships</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Jobs_Posted__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of Jobs Posted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Joint_Invention_Disclosures__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of Joint Invention Disclosures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Joint_PCT_Patents_Filed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of Joint PCT Patents Filed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Joint_Patents_Filed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of Joint Patents Filed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Joint_Patents_Issued__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of Joint Patents Issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Joint_Supervisors_Of_PhD_M_These__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of Joint Supervisors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_KU_Alumni_Serving_On_Firm_Board__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of KU Alumni Serving On Firm Board</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_KU_Alumni_Working_In_Firm__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of KU Alumni Working In Firm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_KU_F_S_Consulting_For_Firm__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of KU F&amp;S Consulting For Firm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_KU_F_S_Serving_On_Firm_Board__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of KU F&amp;S Serving On Firm Board</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_KU_Facilities_Used_By_Firms__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of KU Facilities Used By Firms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_KU_Researchers_For_Sabbatical__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of KU Researchers For Sabbatical</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Key_KU_Alumni__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of Key KU Alumni</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Key_Non_Alumni_On_Firm_Board__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of Key Non-Alumni On Firm Board</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Licenses_Active__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of Licenses Active</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Licenses_Executed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of Licenses Executed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Major_Entities_Collaborating__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of Major Entities Collaborating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_News_Stories_Of_Firm_KU__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of News Stories Of Firm &amp; KU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Seminars_Given_By_Firm_At_KU__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of Seminars Given By Firm At KU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Service_Agreements__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of Service Agreements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Sponsored_Professorships__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of Sponsored Professorships</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Sponsored_Research_Awards__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Expected Value Of Sponsored Research $</description>
        <inlineHelpText>Expected Value Of Sponsored Research $</inlineHelpText>
        <label>EV $ Of Sponsored Research Awards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_Of_Sponsored_Research_Proposals__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of Sponsored Research Proposals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Times_KU_Equipment_Leased__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of Times KU Equipment Leased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Of_Workshops__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # Of Workshops</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Raised_From_External_Investment__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Expected Value Of $ from External Investment</description>
        <inlineHelpText>Expected Value Of $ from External Investment</inlineHelpText>
        <label>EV $ Raised From External Investment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_Raised_From_SBIR_STTR_Grants__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Expected Value Of $  From SBIR/STTR Grants</description>
        <inlineHelpText>Expected Value Of $  From SBIR/STTR Grants</inlineHelpText>
        <label>EV $ Raised From SBIR/STTR Grants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_SBIR_STTR_Grants_Applied__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # SBIR/STTR Grants Applied</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_SBIR_STTR_Grants_Awarded__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # SBIR/STTR Grants Awarded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_of_Joint_PCT_Patents_Issued__c</fullName>
        <defaultValue>0</defaultValue>
        <label>EV # of Joint PCT Patents Issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endowment_Bucket__c</fullName>
        <formula>IF( 
D_Of_Gifts_To_KU__c &gt;=1,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Endowment Bucket</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Strategy__c</fullName>
        <description>Describe the engagement strategy for this Company</description>
        <inlineHelpText>Describe the engagement strategy for this Company</inlineHelpText>
        <label>Engagement Strategy</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Formula_ED_A_1__c</fullName>
        <formula>IF(
Length_Relationship_In_Master_Org_Level__c &gt;0,
(N_oflicensesexecuted__c / Length_Relationship_In_Master_Org_Level__c ),
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula ED A 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_ED_A_2__c</fullName>
        <formula>IF( 
AND( 
N_oflicensesexecuted__c &gt;0, 
Length_Relationship_In_Master_Org_Level__c &gt;0
), 
(D_Generated_From_Licenses__c / N_oflicensesexecuted__c / Length_Relationship_In_Master_Org_Level__c / 100000 ),
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula ED A 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_ED_A_3__c</fullName>
        <formula>IF( 
Length_Relationship_In_Master_Org_Level__c&gt;0,  
(  D_LicenseRevenueFromSpinoffs__c  / Length_Relationship_In_Master_Org_Level__c / 100000 ),
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula ED A 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_ED_E_1__c</fullName>
        <formula>IF( 
EV_Length_Of_Relationship__c  &gt;0, 
( EV_Of_Licenses_Executed__c  / EV_Length_Of_Relationship__c  ), 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula ED E 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_ED_E_2__c</fullName>
        <formula>IF( 
AND( 
EV_Of_Licenses_Executed__c  &gt;0, 
EV_Length_Of_Relationship__c &gt;0 
), 
( EV_Generated_From_Licenses__c / EV_Of_Licenses_Executed__c / EV_Length_Of_Relationship__c / 100000 ), 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula ED E 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_ED_E_3__c</fullName>
        <formula>IF( 
EV_Length_Of_Relationship__c&gt;0, 
(  EV_License_Revenue_From_Spin_Off__c  / EV_Length_Of_Relationship__c / 100000 ), 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula ED E 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>